Move wgc logo to footer. Fix sizing of header on narrow screens.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -81,9 +81,14 @@ body {
     padding-bottom: 20px;
 }
 
+.app-footer img {
+    height: 70px;
+}
+
 .copyright-text {
     font-size: 0.8em;
     margin-bottom: 0;
+    margin-left: 100px;
 }
 
 h1 a:link, h1 a:visited, h3 a:link, h3 a:visited {
